--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "crypto-js": "^4.2.0",
-    "local-storage-manager": "file:../local-storage-manager/dist/local-storage-manager",
+    "ngx-local-storage-manager": "file:../local-storage-manager/dist/local-storage-manager",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
